# go-bazel

./: .bazel_fix_commands.json  .bazelrc  .envrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  WORKSPACE.bazel  deps.bzl  go.mod  go.sum
depsync/: BUILD.bazel  main.go
hello/: BUILD.bazel  main.go
shell/: initialize-environment.sh  output.sh
