load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "depsync_lib",
    srcs = ["main.go"],
    importpath = "github.com/karlhepler/go-bazel/depsync",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "depsync",
    embed = [":depsync_lib"],
    visibility = ["//visibility:public"],
)
