load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "hello_lib",
    srcs = ["main.go"],
    importpath = "github.com/karlhepler/go-bazel/hello",
    visibility = ["//visibility:private"],
    deps = ["@com_github_joho_godotenv//:godotenv"],
)

go_binary(
    name = "hello",
    embed = [":hello_lib"],
    visibility = ["//visibility:public"],
)
